# tree-sitter-thrift

./: .gitignore  Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  grammar.js  package.json
.github/workflows/: ci.yml  publish.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/: thrift.h
examples/: 01-typedefs.thrift  02-enums.thrift  03-comments.thrift  04-namespaces.thrift  05-includes.thrift  06-constants.thrift  07-structs.thrift  08-services.thrift  10-calculator-simple.thrift  11-calculator-complicated.thrift
queries/: folds.scm  highlights.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  parser.c
test/corpus/: annotation  annotation.txt  constants  constants.txt  enum  enum.txt  imports  imports.txt  namespace  namespace.txt  recursive  recursive.txt  struct  struct.txt  tutorial  tutorial.txt  typedef  typedef.txt
