[package]
name = "tree-sitter-thrift"
description = "thrift grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
keywords = ["incremental", "parsing", "thrift"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/duskmoon314/tree-sitter-thrift"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
